tests/ui-stable/diagnostic-not-implemented-into-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
  --> tests/ui-stable/diagnostic-not-implemented-into-bytes.rs:16:24
   |
16 |     takes_into_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoBytes` is not implemented for `NotZerocopy`
  --> tests/ui-stable/../include.rs
   |
   |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and $N others
note: required by a bound in `takes_into_bytes`
  --> tests/ui-stable/diagnostic-not-implemented-into-bytes.rs:19:24
   |
19 | fn takes_into_bytes<T: IntoBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_into_bytes`
